# cyber-events-evolution-

./: .gitignore  README.md  pyproject.toml
data/cyber_events/: events_Advisen.csv  malwares_exploring_topics.csv  randsomware_exploring_topics.csv  statista_cyber_event.csv
data/usage/: dataworld_bank_world.csv  dataworld_bank_world_population.csv  statistica_dataset.csv
src/cyber_analysis/: cyber_incidents_analysis.ipynb
src/event_evolution_analysis/: cyber_incidents_normalized_by_internet_usage copy 2.ipynb  cyber_incidents_normalized_by_internet_usage copy.ipynb  cyber_incidents_normalized_by_internet_usage.ipynb
src/internet_analysis/: compare_internet_datasets.ipynb  internet_users_millions.ipynb
src/internet_analysis/outputs/: country_comparison_details.csv  country_comparison_summary.csv
