[project]
name = "cyber-hazard-evolution"
version = "0.1.0"
description = ""
authors = [
    {name = "Jean Bertholat",email = "jean.bertholat@alten.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.0.1,<8.0.0)"
]
